Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-10236

Hungarian keyboard layout problems in insert mode

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 3.0.0-rc1
    • Qt Creator 2.8.1, Qt Creator 3.0.0-rc1
    • FakeVim
    • None
    • Windows 7 x64
    • 4d89786a88f9ee2f40b7cacef7770af204bc4773

    Description

      In Hungarian keyboards certain special characters need to by typed by Alt-Gr (right alt) + <some key>.

      One example is the dollar sign which would be AltGr+;
      These key combinations works fine outside of FakeVim and inside FakeVim as a matter of fact (but only outside of insert mode).

      But once I'm in Insert mode in FakeVim certain AltGr key combinations do strange and unexpected things. The AltGr+; (dollar) key combination, for instance, instead of writing a dollar sign, it moves the cursor to the end of the line and exits Insert mode. The same thing happens by the way if you press Ctrl+Alt+; in Insert Mode. There are also several other Alt+Gr combinations that also trigger different behavior than the expected successful input of the wanted character.

      Is it possible that the Ctrl+Alt combinations were always there and the bug only is the fact that Alt+Gr triggers the same things as Ctrl+Alt in Insert mode which they shouldn't?

      I haven't tested, but there may be similar problems for other non-US keyboard layouts using Alt+Gr. If so, I believe this is a serious problem for non-US keyboard using Vim users.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              hjk hjk
              amcsi Attila Szeremi
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes