FakeVim: Fix handling of some hungarian characters

Done-by: hjk
Task-number: QTCREATORBUG-10236

Change-Id: Iba97b6ebbd4fee8a4ab52a3986a2f79c7344b75b
Reviewed-by: Lukas Holecek <hluk@email.cz>
Reviewed-by: hjk <hjk121@nokiamail.com>